added Sport and SportService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:C:/Users/florina.morari/Desktop/test/testdb
+spring.datasource.url=jdbc:h2:file:C:/Users/ioan.farcas/Desktop/database/testdb
 
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
