--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:h2:file:C:/Users/ioan.farcas/Desktop/database/testdb
+spring.datasource.url=jdbc:h2:file:./database/testdb
 
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
