Add contact Update design

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 server.port = 8070
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=sportparkbooking@gmail.com
+spring.mail.password=Book12345
+spring.mail.port=587
+spring.mail.properties.smtp.starttls.enable=true
+spring.mail.properties.smtp.auth=true
+
